# yamlin

./: .gitignore  config.yaml  pyproject.toml
src/yamlin/: base.py  deferred.py
tests/test_yamlin/: test_deferred.py
