[project]
name = "aero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bart Frenk", email = "bart.frenk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
aero = "aero:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
